# numerical-methods-theory-and-implementation

./: .gitignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  root_finding.md
docs/interpolation/: clamped_cubic_spline.md  hermite.md  index.md  lagrange.md  natural_cubic_spline.md  newton_i.md
docs/javascripts/: mathjax.js
docs/root_finding/: aitken.md  bisection.md  index.md  muller.md  newton.md  secant.md
fortran/src/integration/: midpoint.f90  trapezoidal.f90
fortran/src/interpolation/: #lagrange.f90#  .#lagrange.f90  hermite.f90  lagrange.f90  newton_i.f90
fortran/src/root_finding/: aitken.f90  bisection.f90  muller.f90  newton.f90  secant.f90
julia/src/integration/: midpoint.jl  trapezoidal.jl
julia/src/interpolation/: hermite.jl  lagrange.jl  natural_cubic_spline.jl  newton_i.jl
julia/src/root_finding/: .#muller.jl  aitken.jl  bisection.jl  muller.jl  newton.jl  secant.jl
python/nmti/: __init__.py
python/nmti/integration/: __init__.py  midpoint.py  simpson.py  trapezoidal.py
python/nmti/interpolation/: .#newton_i.py  __init__.py  clamped_cubic_spline.py  hermite.py  lagrange.py  natural_cubic_spline.py  newton_i.py
python/nmti/root_finding/: .#__init__.py  __init__.py  aitken.py  bisection.py  muller.py  newton.py  secant.py
