[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmti"
version = "0.0.0"
description = "Numerical Methods: Theory and Implementation (Python package)"

readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]